assets/scss/pagebuilder/_kaart.scss
.mod-kaart {
	.kaart-holder {
		position: relative;
		&:after {
			top: 0;
			bottom: 0;
			left: 15px;
			right: 15px;
			content: '';
			// background: #fafafa;
			position: absolute;
			z-index: -1;
		}
	}
	.kaart-wrapper {
		position: relative;
		display: inline-block;
		.kaart-afbeelding {
			width: auto;
			height: auto;
			max-height: 90vh;
			display: inline-block;
			margin: 0 auto;
		}

		.kaart-marker {
			position: absolute;
			cursor: pointer;
			display: inline-block;
			margin: 0 auto;
			
			img {
				height: 36px;
				width: auto; // of elke gewenste grootte
				transform: scale(.8);
			}

			h5 {
				background: $orange;
				display: block;
				width: 30px;
				height: 30px;
				line-height: 30px;
				text-align: center;
				border-radius: 100px;
				color: #fff;
				font-size: 18px;
				box-shadow: 0px 1px 3px rgba(0, 0, 0, .1);
				transform: translateY(15px);
			}

			&:hover {
				h5 {
					background: #fff;
					color: $orange;
				}
			}
		}
	}

	.kaart-accordion {
		margin-top: 6px;

		.accordion-item {
			margin-bottom: 6px;
			.accordion-button {
				position: relative;
				display: flex;
				align-items: center;
				justify-content: space-between; // tekst en chevron netjes uitlijnen
				background: $greylight;
				font-weight: 700;
				padding: 8px 15px 8px 6px;

				&:after {
					content: "";
					margin-left: auto;
					transition: transform 0.3s ease;
					background-image: none;
					width: 10px;
					height: 10px;
					border-right: 2px solid currentColor;
					border-bottom: 2px solid currentColor;
					transform: translateY(-3px) rotate(45deg);
					transform-origin: center;
					align-self: center;
					flex-shrink: 0;
				}

				&:not(.collapsed):after {
					transform: translateY(-1px) rotate(-135deg);
				}

				.accordion-numeric {
					background: #fff;
					display: block;
					width: 30px;
					height: 30px;
					line-height: 30px;
					font-weight: bold;
					text-align: center;
					color: $orange;
					font-size: 20px;
					box-shadow: 0px 1px 3px rgba(0, 0, 0, .1);
					margin-right: 10px;
				}
				
				.pin-holder {
					background: #fff;
					display: block;
					width: 30px;
					height: 30px;
					box-shadow: 0px 1px 3px rgba(0, 0, 0, .1);
					margin-right: 10px;
					img {
						object-fit: contain;
						width: 26px;
						height: 26px;
						margin: 2px;
					}
				}
				.accordion-pin-icon {
					width: 20px;
					height: 20px;
					margin-right: 10px;
				}

				&[aria-expanded="true"] {
					background: $orange;
					color: #fff;
					&:after {
						color: #fff;
						transform: translateY(1px) rotate(225deg);
					}
				}
			}

			.accordion-body {
				background: $greylight;
				.body-wrapper {
					max-width: 800px;
					margin: 0 auto;
					figure {
						width: 100% !important;
						height: auto;
						pointer-events: none;
						figcaption {
							text-align: right;
							font-size: 16px;
							font-style: italic;
							transform: translateY(-5px);
						}
					}
					img {
						width: 100% !important;
						height: auto;
						margin-bottom: 10px;
						pointer-events: none;
					}
				}
			}
		}
	}
}

@include media-breakpoint-down(md) {
	.mod-kaart {
		.container-md {
			padding: 0;
		}
	}
}

@include media-breakpoint-up(md) {
	.mod-kaart {
		.kaart-accordion {
			.accordion-item {
				.accordion-body {
					.body-wrapper {
						padding: 30px 0;
					}
				}
			}
		}
		
		.kaart-wrapper {
			.kaart-marker {
				img {
					transform: scale(1);
				}
			}
		}
	}
}

